--- a/shared/scss/base/common/vars.scss
+++ b/shared/scss/base/common/vars.scss
@@ -95,11 +95,11 @@ $brand-dataset-dark: darken($brand-dataset, 15%);
 $main-logo-width: 280px;
 $hero-main-heading-color: $brand-white;
 $hero-secondary-heading-color: $brand-white;
-$hero-overlay-start: $brand-white;
-$hero-overlay-stop: $brand-success-extralight;
-$hero-overlay-opacity-start: 0.0;
-$hero-overlay-opacity-center: 0.3;
-$hero-overlay-opacity-end: 0.6;
+$hero-overlay-start: $brand-info;
+$hero-overlay-stop: $brand-info;
+$hero-overlay-opacity-start: 0.1;
+$hero-overlay-opacity-center: 0.2;
+$hero-overlay-opacity-end: 0.4;
 $btn-main-bg: $brand-secondary;
 $btn-main-color: $brand-white;
 $btn-main-active-bg: $brand-secondary-light;
