--- a/ckanext/ckanext-sixodp_ui/ckanext/sixodp_ui/templates/footer.html
+++ b/ckanext/ckanext-sixodp_ui/ckanext/sixodp_ui/templates/footer.html
@@ -17,41 +17,38 @@
         </div>
       </div>
       <div class="row row-compensate footer-logo-row">
-        <div class="col-md-2 col-xs-12 footer-column">
-          <div class="footer-logo-wrapper">
+        <div class="col-md-3 col-sm-4 col-xs-12 footer-column">
             <img class="footer-logo" src="/assets/images/footer_logo.png" alt="Site logo">
-          </div>
         </div>
-        <div class="col-md-2 col-xs-12 footer-column">
+        <div class="col-md-3 col-sm-4 col-xs-12 footer-column">
           <!-- Placeholder for additional city logos -->
           <img class="footer-logo" src="/assets/images/turku.png" alt="Logo of Turku">
         </div>
-        <div class="col-md-2 col-xs-12 footer-column">
+        <div class="col-md-3 col-sm-4 col-xs-12 footer-column">
           <!-- Placeholder for additional city logos -->
           <img class="footer-logo" src="/assets/images/vsl.png" alt="Logo of Varsinaissuomen liitto">
         </div>
       </div>
 
     <div class="row row-compensate footer-logo-row">
-      <div class="col-md-2 col-xs-12 footer-column">
-
+      <div class="col-md-3 col-sm-4 col-xs-12 footer-column">
           <img class="footer-logo" src="/assets/images/turun-yliopisto.png" alt="Logo of turku university">
 
       </div>
-      <div class="col-md-2 col-xs-12 footer-column">
+      <div class="col-md-3 col-sm-4 col-xs-12 footer-column">
         <!-- Placeholder for additional city logos -->
         <img class="footer-logo small" src="/assets/images/abo-akademi.png" alt="Logo of Åbo Akademi">
       </div>
-      <div class="col-md-2 col-xs-12 footer-column">
+      <div class="col-md-3 col-sm-4 col-xs-12 footer-column">
         <!-- Placeholder for additional city logos -->
         <img class="footer-logo" src="/assets/images/novia.png" alt="Logo of Novia">
       </div>
-      <div class="col-md-2 col-xs-12 footer-column">
+      <div class="col-md-3 col-sm-4 col-xs-12 footer-column">
         <!-- Placeholder for additional city logos -->
         <img class="footer-logo" src="/assets/images/satakuntaliitto.png" alt="Logo of satakuntaliitto">
       </div>
 
-      <div class="col-md-6 col-xs-12 pull-right footer-column">
+      <div class="col-md-6 col-sm-12 col-xs-12 pull-right footer-column">
         {% set social_links = h.get_social_links() %}
         <div class="row row-compensate footer-row">
           <div class="col-xs-12 text-right">
