--- a/ckanext/ckanext-sixodp_ui/ckanext/sixodp_ui/templates/footer.html
+++ b/ckanext/ckanext-sixodp_ui/ckanext/sixodp_ui/templates/footer.html
@@ -28,16 +28,18 @@
           <!-- Placeholder for additional city logos -->
           <img class="footer-logo" src="/assets/images/vsl.png" alt="Logo of Varsinaissuomen liitto">
         </div>
+        <div class="col-md-3 col-sm-4 col-xs-12 footer-column">
+          <!-- Placeholder for additional city logos -->
+        </div>
+        <div class="col-md-2 col-sm-12 col-xs-12 footer-column">
+          <!-- Placeholder for additional city logos -->
+        </div>
+
       </div>
 
     <div class="row row-compensate footer-logo-row">
       <div class="col-md-3 col-sm-4 col-xs-12 footer-column">
           <img class="footer-logo" src="/assets/images/turun-yliopisto.png" alt="Logo of turku university">
-
-      </div>
-      <div class="col-md-3 col-sm-4 col-xs-12 footer-column">
-        <!-- Placeholder for additional city logos -->
-        <img class="footer-logo small" src="/assets/images/abo-akademi.png" alt="Logo of Åbo Akademi">
       </div>
       <div class="col-md-3 col-sm-4 col-xs-12 footer-column">
         <!-- Placeholder for additional city logos -->
@@ -47,8 +49,12 @@
         <!-- Placeholder for additional city logos -->
         <img class="footer-logo" src="/assets/images/satakuntaliitto.png" alt="Logo of satakuntaliitto">
       </div>
+      <div class="col-md-3 col-sm-4 col-xs-12 footer-column">
+        <!-- Placeholder for additional city logos -->
+        <img class="footer-logo" src="/assets/images/abo-akademi.png" alt="Logo of Åbo Akademi">
+      </div>
 
-      <div class="col-md-6 col-sm-12 col-xs-12 pull-right footer-column">
+      <div class="col-md-2 col-sm-12 col-xs-12 pull-right footer-column">
         {% set social_links = h.get_social_links() %}
         <div class="row row-compensate footer-row">
           <div class="col-xs-12 text-right">
@@ -65,7 +71,7 @@
 
     </div>
 
-      <hr />
+      <hr class="footer-line"/>
       
       <div class="row row-compensate footer-row">
         <div class="col-md-12 footer-section footer-section--links">
