Add missing class

--- a/ckanext/ckanext-sixodp_ui/ckanext/sixodp_ui/templates/footer.html
+++ b/ckanext/ckanext-sixodp_ui/ckanext/sixodp_ui/templates/footer.html
@@ -51,7 +51,7 @@
       </div>
       <div class="col-md-3 col-sm-4 col-xs-12 footer-column">
         <!-- Placeholder for additional city logos -->
-        <img class="footer-logo" src="/assets/images/abo-akademi.png" alt="Logo of Åbo Akademi">
+        <img class="footer-logo small" src="/assets/images/abo-akademi.png" alt="Logo of Åbo Akademi">
       </div>
 
       <div class="col-md-2 col-sm-12 col-xs-12 pull-right footer-column">
