--- a/ckanext/ckanext-sixodp_ui/ckanext/sixodp_ui/templates/footer.html
+++ b/ckanext/ckanext-sixodp_ui/ckanext/sixodp_ui/templates/footer.html
@@ -28,10 +28,10 @@
           <!-- Placeholder for additional city logos -->
           <img class="footer-logo" src="/assets/images/vsl.png" alt="Logo of Varsinaissuomen liitto">
         </div>
-        <div class="col-md-3 col-sm-4 col-xs-12 footer-column">
+        <div class="col-md-3 col-sm-4 col-xs-12 footer-column footer-column-empty">
           <!-- Placeholder for additional city logos -->
         </div>
-        <div class="col-md-2 col-sm-12 col-xs-12 footer-column">
+        <div class="col-md-2 col-sm-12 col-xs-12 footer-column footer-column-empty">
           <!-- Placeholder for additional city logos -->
         </div>
 
@@ -54,7 +54,7 @@
         <img class="footer-logo small" src="/assets/images/abo-akademi.png" alt="Logo of Åbo Akademi">
       </div>
 
-      <div class="col-md-2 col-sm-12 col-xs-12 pull-right footer-column">
+      <div class="col-md-2 pull-right footer-column">
         {% set social_links = h.get_social_links() %}
         <div class="row row-compensate footer-row">
           <div class="col-xs-12 text-right">
