--- a/shared/scss/base/common/vars.scss
+++ b/shared/scss/base/common/vars.scss
@@ -31,7 +31,7 @@ $brand-primary-dark: #2A4763;
 $brand-primary-extralight: #E7EEF5;
 $brand-primary-extradark: darken($brand-primary, 15%);
 
-$brand-secondary: #EE7656;
+$brand-secondary: #C85030;
 $brand-secondary-light: lighten($brand-secondary, 10%);
 $brand-secondary-dark: darken($brand-secondary, 10%);
 $brand-secondary-extralight: lighten($brand-secondary, 35%);
@@ -102,9 +102,9 @@ $hero-main-heading-color: $brand-white;
 $hero-secondary-heading-color: $brand-white;
 $hero-overlay-start: $brand-info;
 $hero-overlay-stop: $brand-info;
-$hero-overlay-opacity-start: 0.1;
-$hero-overlay-opacity-center: 0.2;
-$hero-overlay-opacity-end: 0.4;
+$hero-overlay-opacity-start: 0.2;
+$hero-overlay-opacity-center: 0.3;
+$hero-overlay-opacity-end: 0.5;
 $btn-main-bg: $brand-secondary;
 $btn-main-color: $brand-white;
 $btn-main-active-bg: $brand-secondary-light;
