--- a/shared/scss/base/common/vars.scss
+++ b/shared/scss/base/common/vars.scss
@@ -243,7 +243,7 @@ $filter-hover: $text-color;
 // Links
 $link-color: $brand-primary;
 $link-color-active: lighten($link-color, 20%);
-$link-secondary-color: $brand-success;
+$link-secondary-color: $brand-primary;
 $link-secondary-color-active: lighten($link-secondary-color, 20%);
 
 // Rating (ckan extension)
