--- a/shared/scss/base/common/vars.scss
+++ b/shared/scss/base/common/vars.scss
@@ -55,7 +55,7 @@ $brand-warning-dark: darken($brand-warning, 10%);
 $brand-warning-extralight: lighten($brand-warning, 35%);
 $brand-warning-extradark: darken($brand-warning, 15%);
 
-$brand-danger: #ee7656;
+$brand-danger: #C24A2A;
 $brand-danger-light: lighten($brand-danger, 10%);
 $brand-danger-dark: darken($brand-danger, 10%);
 $brand-danger-extralight: lighten($brand-danger, 35%);
